src/snapshots/afrotd__parser__tests__rule_7.3.12.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 12
title: Persönliche Fouls und unsportliche Verhalten-Fouls
text: "durch Team B während eines legalen VorwärtspassSpieles Für persönliche Fouls und unsportliches Verhalten durch Team B während eines legalen Vorwärtspass-Spieles gilt folgende Regelung: Bei einem vollständigen Vorwärtspass wird die Strafe vom Ende des letzten Laufes durchgeführt, wenn dieser jenseits der neutralen Zone endet. Ist der Pass unvollständig oder abgefangen oder ereignet sich während des Downs ein Team Ballbesitzwechsel, wird die Strafe vom Previous Spot durchgeführt (Regel 9.1 Strafe und Regel 9.2.1 Strafe) (A.R. 7.3.12.I und 9.1.2.III). Regel 8 Punkte"
interpretations: []
