src/snapshots/afrotd__parser__tests__rule_7.3.5.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 5
title: Berechtigung erlangt oder wiedererlangt
text: "Berührt ein Team B-Spieler oder ein Schiedsrichter einen legalen Vorwärtspass, werden alle Spieler berechtigt (A.R. 7.3.5.I)."
interpretations: []
